--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
   <artifactId>log4j-core</artifactId> 
   <version>2.0-beta9</version>
  </dependency> 
+ <dependency>
+  <groupId>com.googlecode.json-simple</groupId>
+  <artifactId>json-simple</artifactId>
+  <version>1.1.1</version>
+ </dependency>
 </dependencies>
 
 <build>
