--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
  <dependency> 
   <groupId>org.apache.logging.log4j</groupId> 
   <artifactId>log4j-api</artifactId> 
-  <version>2.0-beta9</version>
+  <version>2.2</version>
  </dependency> 
  <dependency>
   <groupId>org.apache.logging.log4j</groupId> 
   <artifactId>log4j-core</artifactId> 
-  <version>2.0-beta9</version>
+  <version>2.2</version>
  </dependency> 
  <dependency>
   <groupId>com.googlecode.json-simple</groupId>
