--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,19 @@
   <plugins>
    <plugin>
     <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-jar-plugin</artifactId>
+    <version>2.4</version>
+    <configuration>
+     <archive>
+      <manifest>
+       <mainClass>ca.uwo.csd.cs2212.team18.AppMain</mainClass>
+      </manifest>
+     </archive>
+    </configuration>
+   </plugin>
+
+   <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-assembly-plugin</artifactId>
     <version>2.5.3</version>
     <configuration>
